scripts/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - host: domain.com
      http:
        paths:
          - pathType: Prefix
            path: "/go/"
            backend:
              service:
                name: go-app-service
                port:
                  number: 4000
          - pathType: Prefix
            path: "/nodejs/"
            backend:
              service:
                name: nodejs-app-service
                port:
                  number: 3000
